--- a/tkmapper/src/main/resources/application.yml
+++ b/tkmapper/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource #Druid\u8FDE\u63A5\u6C60
-    url: jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=true
+    url: jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=Asia/Shanghai
     username: root #\u6570\u636E\u5E93\u7528\u6237\u540D
     password: root #\u6570\u636E\u5E93\u5BC6\u7801
     driver-class-name: com.mysql.cj.jdbc.Driver #mysql\u9A71\u52A8
