--- a/mybatis-plus/pom.xml
+++ b/mybatis-plus/pom.xml
@@ -11,6 +11,7 @@
     <groupId>com.hua</groupId>
     <artifactId>mybatis-plus</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>war</packaging>
     <name>mybatis-plus</name>
     <description>Demo project for Spring Boot</description>
 
